--- a/loadingAnim/src/main/res/values/strings.xml
+++ b/loadingAnim/src/main/res/values/strings.xml
@@ -1,2 +1,8 @@
 <resources>
+
+    <string name="loading_empty">暂无数据</string>
+    <string name="loading_retry">点击刷新</string>
+    <string name="loading_error">错误</string>
+    <string name="loading_network_none">无网络连接</string>
+
 </resources>
